k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: im-ss1
  labels:
    app: im-ss1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: im-ss1
  template:
    metadata:
      labels:
        app: im-ss1
    spec:
      containers:
        - name: im-ss1
          image: msahique/im_security_gateway:v1
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
